# Orca-CLI

./: .gitignore  License  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-installer.yml  ci.yml  release.yml
cli/: Cargo.toml  ROADMAP.md  guide.md  install.js  package-lock.json  package.json
cli/src/: api_client.rs  cli.rs  commit_cache.rs  commit_validator.rs  config.rs  diff_optimizer.rs  flows.rs  gemini.rs  git.rs  main.rs  plan.rs  plan_guard.rs  plan_types.rs  tests_integ.rs
cli/src/ai/: gemini.rs  mod.rs  openai.rs  orca.rs
cli/src/flow/: flows.rs  flows_apply.rs  flows_branch.rs  flows_conflict.rs  flows_doctor.rs  flows_error.rs  flows_flow.rs  flows_git.rs  flows_login.rs  flows_menu.rs  flows_plan.rs  flows_publish.rs  flows_release.rs  flows_safe.rs  flows_setup.rs  flows_spinner.rs  flows_stack.rs  flows_tidy.rs  mod.rs  pr_template.rs  pr_workflow.rs  update.rs
cli/src/ui/: menu.rs  mod.rs  version.rs
client/: .dockerignore  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
homebrew/: orca.rb
installer/: License.rtf  Orca.wxs
provision/: docker-compose.yml  nginx.conf
scripts/: bump-version.js  install.js  install.sh
server/: .dockerignore  Dockerfile  package-lock.json  package.json
winget/: vanthaita.Orca.installer.yaml  vanthaita.Orca.locale.en-US.yaml  vanthaita.Orca.yaml
(+129 files in other folders)
