[package]
name = "orca"
version = "0.1.8"
edition = "2024"
description = "AI-powered Git commit manager using Gemini"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
dirs = "5"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
